// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderTest render: no feature flag store data 1`] = `
"<header className=\\"headerBar\\">
  <Component deps={{...}} />
  <span className=\\"headerText\\">
    Accessibility Insights for Web
  </span>
</header>"
`;

exports[`HeaderTest render: tabClosed is false 1`] = `
<header
  className="headerBar"
>
  <Component
    deps={null}
  />
  <span
    className="headerText"
  >
    Accessibility Insights for Web
  </span>
  <Switcher
    deps={null}
    pivotKey={2}
  />
  <GearOptionsButtonComponent
    dropdownClickHandler={
      proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "dropdownActionMessageCreator": undefined,
        "openPreviewFeaturesPanelHandler": [Function],
        "openScopingPanelHandler": [Function],
        "openSettingsPanelHandler": [Function],
        "source": undefined,
      }
    }
    featureFlags={
      Object {
        "test-flag": true,
      }
    }
  />
</header>
`;

exports[`HeaderTest render: tabClosed is true 1`] = `
<header
  className="headerBar"
>
  <Component
    deps={null}
  />
  <span
    className="headerText"
  >
    Accessibility Insights for Web
  </span>
</header>
`;
